✨💄Added a Back Button & Hover Effects
- back button from subpages to navigate back to the bigger categories
- smaller spacing adjustments
- hover effects

--- a/indian.html
+++ b/indian.html
@@ -32,6 +32,12 @@
         </nav>
     </header>
 
+    <!--back button-->
+    <a href="savory.html" class="back-button">
+        <span></span>
+        <span></span>
+    </a>
+    
     <!--cuisine-->
     <h1>Indian 🇮🇳</h1>
 
