--- a/tea.html
+++ b/tea.html
@@ -12,27 +12,32 @@
 </head>
 <body>
      
-     <!--menu-->
-     <header>
-         <h2 class="logo"><a href="index.html">Mihika's Menu</a></h2>
-         <input type="checkbox" id="nav-toggle" class="nav-toggle" hidden>
-         <label for="nav-toggle" class="nav-toggle-label">
-             <span></span>
-             <span></span>
-             <span></span>
-         </label>
-         <nav>
-             <ul>
-                 <li><a href="index.html">Home 👋</a></li>
-                 <li><a href="savory.html">Savory 🌶️</a></li>
-                 <li><a href="sweet.html">Sweet 🍬</a></li>
-                 <li><a href="sips.html">Sips 🍹</a></li>
-                 <li><a href="send_a_suggestion.html">Send a Suggestion 💌</a></li>
-             </ul>
-         </nav>
-     </header>
+    <!--menu-->
+    <header>
+        <h2 class="logo"><a href="index.html">Mihika's Menu</a></h2>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" hidden>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home 👋</a></li>
+                <li><a href="savory.html">Savory 🌶️</a></li>
+                <li><a href="sweet.html">Sweet 🍬</a></li>
+                <li><a href="sips.html">Sips 🍹</a></li>
+                <li><a href="send_a_suggestion.html">Send a Suggestion 💌</a></li>
+            </ul>
+        </nav>
+    </header>
  
-
+    <!--back button-->
+    <a href="sips.html" class="back-button">
+        <span></span>
+        <span></span>
+    </a>
+    
     <!--cuisine-->
     <h1>Tea 🍵</h1>
 
