--- a/bakeries.html
+++ b/bakeries.html
@@ -32,6 +32,12 @@
         </nav>
     </header>
 
+    <!--back button-->
+    <a href="sweet.html" class="back-button">
+        <span></span>
+        <span></span>
+    </a>
+
     <!--cuisine-->
     <h1>Bakeries 🥐</h1>
 
