--- a/japanese.html
+++ b/japanese.html
@@ -32,6 +32,12 @@
         </nav>
     </header>
 
+    <!--back button-->
+    <a href="savory.html" class="back-button">
+        <span></span>
+        <span></span>
+    </a>
+
     <!--cuisine-->
     <h1>Japanese 🇯🇵</h1>
 
