--- a/juice.html
+++ b/juice.html
@@ -32,6 +32,12 @@
         </nav>
     </header>
 
+    <!--back button-->
+    <a href="sips.html" class="back-button">
+        <span></span>
+        <span></span>
+    </a>
+
     <!--cuisine-->
     <h1>Juice 🧃</h1>
 
