--- a/thai.html
+++ b/thai.html
@@ -32,6 +32,11 @@
          </nav>
      </header>
  
+    <!--back button-->
+    <a href="savory.html" class="back-button">
+        <span></span>
+        <span></span>
+    </a>
 
     <!--cuisine-->
     <h1>Thai 🇹🇭</h1>
